added the css file

--- a/index.html
+++ b/index.html
@@ -4,60 +4,7 @@
   <meta charSet="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Medical Diagnostic Game</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-    }
-    .card {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 20px;
-      max-width: 400px;
-      width: 100%;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-    .button {
-      background-color: #007bff;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    .button:hover {
-      background-color: #0056b3;
-    }
-    .input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-    .timer, .symptom, .result {
-      margin-bottom: 15px;
-      font-size: 18px;
-      font-weight: bold;
-    }
-    .symptom-list {
-      margin-bottom: 15px;
-      font-size: 16px;
-    }
-    .symptom-box {
-      background-color: #f0f0f0;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      padding: 10px;
-      margin: 5px 0;
-      font-size: 16px;
-    }
-  </style>
+  <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
   <h1>Medical Diagnostic Game</h1>
