--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Medical Diagnostic Game</h1>
+  <section class="s1">
+    <h1>Medical Diagnostic Game</h1>
+  </section>
+  <section class="s2">
   <div id="game" class="card">
     <div class="timer">Time Remaining: <span id="timer">60</span>s</div>
     <div class="symptom-container" id="symptomContainer"></div>
@@ -18,6 +21,7 @@
       <h3>Past Guesses:</h3>
       <ul id="guessesList"></ul>
     </div>
+  </section>
     
   </div>
   <button id="restartBtn" class="button" style="display: none;">Play Again</button>
