--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Medical Diagnostic Game</title>
+  <title>Knowsis - Medical Diagnostic Game</title>
   <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
   <section class="s1">
-    <h1>Medical Diagnostic Game</h1>
+    <h1>KNOWSIS</h1>
+    <h2>Medical Diagnostic Game</h2>
   </section>
   <section class="s2">
-  <div id="game" class="card">
+  <div id="game" class="Card">
     <div class="timer">Time Remaining: <span id="timer">60</span>s</div>
     <div class="symptom-container" id="symptomContainer"></div>
     <input type="text" id="diagnosisInput" class="input" placeholder="Enter your diagnosis" />
@@ -122,6 +123,11 @@
       }
       submitBtn.style.display = "none";
       restartBtn.style.display = "block";
+      diagnosisInput.addEventListener("keydown", function(event) {
+	if (event.key === "Enter") {
+            submitBtn.click();
+	}
+      });
     }
 
     function clearMessage() {
