--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <aside class = "sidebar">
 	<h3>Stats</h3>
 	<p>Best Time: <span id="bestTime">--</span>s</p>
-	<p>Worst Time: <span id="</p>
-	    
+	<p>Worst Time: <span id="worstTime">--</span>s</p>
+    </aside>	    
   <section class="s2">
   <div id="game" class="Card">
     <div class="timer">Time Remaining: <span id="timer">60</span>s</div>
