--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Knowsis - Medical Diagnostic Game</title>
   <link href="./styles.css" rel="stylesheet">
+  <audio controls autoplay>
+  <source src="./kahoot.mp3" type="audio/mpeg">
+  </audio>
 </head>
 <body>
   <section class="s1">
@@ -143,6 +146,7 @@
     const submitBtn = document.getElementById("submitBtn");
     const restartBtn = document.getElementById("restartBtn");
     const stopBtn = document.getElementById("stopBtn");
+    const previousTimes(0);
 
     // Display all possible diagnoses
     const diagnosisList = document.getElementById("diagnosisList");
