forgot to commit these lol

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <section class="s1">
     <h1>KNOWSIS</h1>
-    <h2>Medical Diagnostic Game</h2>
+    <h2>Practice your medical diagnosis!</h2>
   </section>
 
   <section class="s2">
